--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Aperture Template
-url: "https://cosmic-hippopotamus.cloudvent.net"
+title: Roxy & Randy
+url: "https://roxyrandy.netlify.com/"
 baseurl:
 google_analytics_key:
 
@@ -14,7 +14,7 @@ author:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Aperture Template
+  name: 
   links:
     - https://github.com/CloudCannon/aperture-jekyll-template
 
